--- a/giftyed/package.json
+++ b/giftyed/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^10.3.1",
-    "formik": "^2.4.4",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.52",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "firebase": "^10.3.1",
+    "formik": "^2.4.4",
+    "react-router-dom": "^6.15.0",
     "sass": "^1.66.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
