--- a/giftyed/package.json
+++ b/giftyed/package.json
@@ -6,9 +6,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
-    "@mui/material": "^5.14.10",
+    "@mui/lab": "^5.0.0-alpha.158",
+    "@mui/material": "^5.15.2",
     "@mui/x-data-grid": "^6.18.1",
-    "@mui/x-date-pickers": "^6.18.1",
+    "@mui/x-date-pickers": "^6.18.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "firebase": "^10.4.0",
     "formik": "^2.4.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
